--- a/src/Components/Gallery/Gel.css
+++ b/src/Components/Gallery/Gel.css
@@ -14,10 +14,10 @@
   margin-right: auto;
   width: 100%;
   animation-name: nchrys;
-  /* animation-iteration-count: unset; */
-  animation-iteration-count: infinite;
+  animation-iteration-count: unset;
+  /* animation-iteration-count: infinite; */
   animation-direction: alternate;
-  animation-duration: 2s;
+  animation-duration: 10s;
 }
 @keyframes nchrys {
   from {
